fix overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,4 @@
 /* for custom css */
-* {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
 html, body{
     overflow-x: hidden;
 }
